(feature) add ability to read tasks from server

--- a/server/Application/appsettings.json
+++ b/server/Application/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "Postgress" : "Host=localhost;Port=5432;Database=reportDb;Username=postgres;Password=qwertyui"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
