(refactoring) organize token generation logic

--- a/server/Application/appsettings.json
+++ b/server/Application/appsettings.json
@@ -2,6 +2,9 @@
   "ConnectionStrings": {
     "Postgress" : "Host=localhost;Port=5432;Database=reportDb;Username=postgres;Password=qwertyui"
   },
+  "Token": {
+    "Key": "Super top secret key ever"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
